# Purpose

./: README.md  pyproject.toml
docs/: app.js  index.html  lenses.js  manifest.json  midwife.js  storage.js  styles.css  sw.js
docs/ask/: app.js  index.html  lenses.js  manifest.json  midwife.js  storage.js  sw.js
src/purpose/: __init__.py  cli.py  core.py  journal.py  lenses.py  llm_midwife.py  midwife.py
tests/: test_core.py  test_journal.py  test_lenses_and_midwife.py
