[project]
name = "purpose"
version = "0.1.0"
description = "立志的递归算法 — A recursive midwife for finding one's aspiration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "anthropic>=0.40",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
purpose = "purpose.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/purpose"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
